{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 293,
  "lineage": "d3b88879-50c3-586a-621d-159b31546ef1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43c3e609ba2aed1",
            "association_id": "eipassoc-022eb07efa15228ff",
            "domain": "vpc",
            "id": "eipalloc-0b43c3e609ba2aed1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f4900c73e87a2268",
            "private_dns": "ip-10-0-0-33.ec2.internal",
            "private_ip": "10.0.0.33",
            "public_dns": "ec2-52-201-23-177.compute-1.amazonaws.com",
            "public_ip": "52.201.23.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip"
            },
            "tags_all": {
              "Name": "eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "clselb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:473761847920:loadbalancer/clasicelb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "clasicelb-628541482.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 6,
                "target": "HTTP:80/index.html",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "clasicelb",
            "idle_timeout": 60,
            "instances": [
              "i-00fd8b69b4b50f41e",
              "i-0811831f097af9f47",
              "i-0ae128085622c515f"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "clasicelb",
            "security_groups": [
              "sg-084dcad16272c32d3"
            ],
            "source_security_group": "473761847920/sgteelb",
            "source_security_group_id": "sg-084dcad16272c32d3",
            "subnets": [
              "subnet-0c796e040d2979933",
              "subnet-0eeaaebee1d22de63"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sgteelb",
            "aws_subnet.s1",
            "aws_subnet.s2",
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-te",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:internet-gateway/igw-027842b697dc844bd",
            "id": "igw-027842b697dc844bd",
            "owner_id": "473761847920",
            "tags": {
              "Name": "igw-te"
            },
            "tags_all": {
              "Name": "igw-te"
            },
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43c3e609ba2aed1",
            "connectivity_type": "public",
            "id": "nat-0c621ca481e68b79b",
            "network_interface_id": "eni-0f4900c73e87a2268",
            "private_ip": "10.0.0.33",
            "public_ip": "52.201.23.177",
            "subnet_id": "subnet-0eeaaebee1d22de63",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.s1",
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:route-table/rtb-0898c3a247c6237ac",
            "id": "rtb-0898c3a247c6237ac",
            "owner_id": "473761847920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027842b697dc844bd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt1(public)-te"
            },
            "tags_all": {
              "Name": "rt1(public)-te"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-o1",
            "aws_internet_gateway.igw-te"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:route-table/rtb-0346fe76dab92f5c9",
            "id": "rtb-0346fe76dab92f5c9",
            "owner_id": "473761847920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c621ca481e68b79b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt2(private)-te"
            },
            "tags_all": {
              "Name": "rt2(private)-te"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass1-s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064168f1b15df13d2",
            "route_table_id": "rtb-0898c3a247c6237ac",
            "subnet_id": "subnet-0eeaaebee1d22de63"
          },
          "dependencies": [
            "aws_route_table.rt1_public",
            "aws_subnet.s1",
            "aws_vpc.vpc-o1",
            "aws_internet_gateway.igw-te"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass1-s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e767786974f97d6c",
            "route_table_id": "rtb-0898c3a247c6237ac",
            "subnet_id": "subnet-0c796e040d2979933"
          },
          "dependencies": [
            "aws_internet_gateway.igw-te",
            "aws_route_table.rt1_public",
            "aws_subnet.s2",
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass3-s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e900e5571af51ac0",
            "route_table_id": "rtb-0346fe76dab92f5c9",
            "subnet_id": "subnet-0edb4576c295b8e20"
          },
          "dependencies": [
            "aws_subnet.s1",
            "aws_subnet.s3",
            "aws_vpc.vpc-o1",
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.rt2_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass3-s4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0518958ef9ebf6fad",
            "route_table_id": "rtb-0346fe76dab92f5c9",
            "subnet_id": "subnet-0b939c6ff9d3dd2f3"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.rt2_private",
            "aws_subnet.s1",
            "aws_subnet.s4",
            "aws_vpc.vpc-o1",
            "aws_eip.eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgforlc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:security-group/sg-0db98d04b9d543ca4",
            "description": "sgforlc1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db98d04b9d543ca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgforlc1",
            "name_prefix": "",
            "owner_id": "473761847920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgforlc1"
            },
            "tags_all": {
              "Name": "sgforlc1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:security-group/sg-014d9394e739fa93b",
            "description": "sgte",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014d9394e739fa93b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgte",
            "name_prefix": "",
            "owner_id": "473761847920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgte"
            },
            "tags_all": {
              "Name": "sgte"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgteelb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:security-group/sg-084dcad16272c32d3",
            "description": "sgteelb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084dcad16272c32d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgteelb",
            "name_prefix": "",
            "owner_id": "473761847920",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sgteelb"
            },
            "tags_all": {
              "Name": "sgteelb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:subnet/subnet-0eeaaebee1d22de63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/26",
            "id": "subnet-0eeaaebee1d22de63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473761847920",
            "tags": {
              "Name": "s1-vpc-te(public)"
            },
            "tags_all": {
              "Name": "s1-vpc-te(public)"
            },
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:subnet/subnet-0c796e040d2979933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.64/26",
            "id": "subnet-0c796e040d2979933",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473761847920",
            "tags": {
              "Name": "s2-vpc-te(public)"
            },
            "tags_all": {
              "Name": "s2-vpc-te(public)"
            },
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:subnet/subnet-0edb4576c295b8e20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.128/26",
            "id": "subnet-0edb4576c295b8e20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473761847920",
            "tags": {
              "Name": "s3-vpc-te(private)"
            },
            "tags_all": {
              "Name": "s3-vpc-te(private)"
            },
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "s4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:subnet/subnet-0b939c6ff9d3dd2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.192/26",
            "id": "subnet-0b939c6ff9d3dd2f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "473761847920",
            "tags": {
              "Name": "s4-vpc-te(private)"
            },
            "tags_all": {
              "Name": "s4-vpc-te(private)"
            },
            "vpc_id": "vpc-0e062cf1ee3ae5789"
          },
          "dependencies": [
            "aws_vpc.vpc-o1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-o1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:473761847920:vpc/vpc-0e062cf1ee3ae5789",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fbdb62d1cf5245e",
            "default_route_table_id": "rtb-0a6f0632400146000",
            "default_security_group_id": "sg-0661492c21775915c",
            "dhcp_options_id": "dopt-0be15c45f210a5590",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e062cf1ee3ae5789",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a6f0632400146000",
            "owner_id": "473761847920",
            "tags": {
              "Name": "vpc-te",
              "env": "dev"
            },
            "tags_all": {
              "Name": "vpc-te",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}